--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div id="navigation">
             <ul class="primary">
                     <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="admin.jsp">Admin</a></li>
-                    <li><a href="user.jsp">User</a></li>
-                    <li><a href="guest.jsp">Guest User</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
+                    <li><a href="http://travelrating.tk/admin.jsp">Admin</a></li>
+                    <li><a href="http://travelrating.tk/user.jsp">User</a></li>
+                    <li><a href="http://travelrating.tk/guest.jsp">Guest User</a></li>
+                    <li><a href="http://travelrating.tk/contact.html">Contact us</a></li>
             </ul>
         </div>
     </div>
