--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="http://travelrating.tk/admin.jsp">Admin</a></li>
                     <li><a href="http://travelrating.tk/user.jsp">User</a></li>
-                    <li><a href="http://travelrating.tk/guest.jsp">Guest User</a></li>
+                    <li><a href="http://travelrating.tk/gust.jsp">Guest User</a></li>
                     <li><a href="http://travelrating.tk/contact.html">Contact us</a></li>
             </ul>
         </div>
