--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="navigation">
             <ul class="primary">
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li class="current"><a href="blog.html">Home</a></li>
                     <li><a href="http://travelrating.tk/admin.jsp">Admin</a></li>
                     <li><a href="http://travelrating.tk/user.jsp">User</a></li>
                     <li><a href="http://travelrating.tk/gust.jsp">Guest User</a></li>
