--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <span id="button"></span>
     <div>
         <div id="logo">
-            <a href="index.html"><img src="images/logo.gif" alt="Logo" /></a>
+            <a href="blog.html"><img src="images/logo.gif" alt="Logo" /></a>
         </div>
         <div id="navigation">
             <ul class="primary">
