--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="navigation">
             <ul class="primary">
                     <li class="current"><a href="blog.html">Home</a></li>
-                    <li><a href="http://travelrating.tk/admin.jsp">Admin</a></li>
+                    <li><a href="http://travelrating.tk/admin.html">Admin</a></li>
                     <li><a href="http://travelrating.tk/user.jsp">User</a></li>
                     <li><a href="http://travelrating.tk/gust.jsp">Guest User</a></li>
                     <li><a href="http://travelrating.tk/contact.html">Contact us</a></li>
