--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <span id="button"></span>
     <div>
         <div id="logo">
-            <a href="blog.html"><img src="images/logo.gif" alt="Logo" /></a>
+            <a href="index.html"><img src="images/logo.gif" alt="Logo" /></a>
         </div>
         <div id="navigation">
             <ul class="primary">
-                    <li class="current"><a href="blog.html">Home</a></li>
-                    <li><a href="http://travelrating.tk/admin.html">Admin</a></li>
-                    <li><a href="http://travelrating.tk/user.jsp">User</a></li>
-                    <li><a href="http://travelrating.tk/gust.jsp">Guest User</a></li>
-                    <li><a href="http://travelrating.tk/contact.html">Contact us</a></li>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="admin.html">Admin</a></li>
+                    <li><a href="user.html">User</a></li>
+                    <li><a href="guest.html">Guest User</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
             </ul>
         </div>
     </div>
