--- a/user.html
+++ b/user.html
@@ -4,8 +4,12 @@
 	<title>Travel Rating</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+<%
+    if (request.getParameter("msg") == null) {%>
+    <script>alert('User Registered Successfully...!');</script>
+<%}%>
 <body>
-	<div id="header">
+<div id="header">
 <div class="section">
     <span id="ribbon"></span>
     <span id="button"></span>
@@ -16,8 +20,8 @@
         <div id="navigation">
             <ul class="primary">
                     <li><a href="index.html">Home</a></li>
-                    <li class="current"><a href="admin.html">Admin</a></li>
-                    <li><a href="user.html">User</a></li>
+                    <li><a href="admin.html">Admin</a></li>
+                    <li class="current"><a href="user.html">User</a></li>
                     <li><a href="guest.html">Guest User</a></li>
                     <li><a href="contact.html">Contact us</a></li>
             </ul>
@@ -30,9 +34,9 @@
     <span class="background"></span>
     <div class="section">
         <center>
-        <h1 class="title"><font color="blue"><i>Admin Login</i></font></h1></center>
-        <form action="adminact.html" method="post">
-        <center><table border="0" width="30%">
+            <h1 class="title"><font color="blue"><i>User Login</i></font></h1></center>
+        <form action="useract.html" method="post">
+        <center><table width="281" border="0" >
         <tr>
             <td><font color="black"> User Name :</td>
             <td><input type="text" name="username" required="" /></td>
@@ -42,9 +46,13 @@
             <td><input type="password" name="password" required="" /></td>
         </tr>
         <td rowspan="2" align="center">
-        <td><input type="submit" name="submit" value="Login" /></td>    
+        <td><input type="submit" name="submit" value="Login" /></td>
         </table></center>
-        </form><br><br>
+        </form>
+        <center><a href="userreg.html">
+                <font color="red" style="font-size: 15px">Click here for Registration </font>
+        </a></center>  
+        <br><br>
     </div>
 </div>
 </div>
